objects/Commercial_Gesture__c.object
<CustomObject>
    <label>Commercial Gesture</label>
    <nameField>
        <displayFormat>CG-{00000000}</displayFormat>
        <label>Commercial Gesture Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commercial Gestures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Case__c</fullName>
        <description>Case to which compensation record relates.</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Compensations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Promo Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>Text(Case__r.Market__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Validé</fullName>
                    <label>Processed</label>
                </value>
                <value>
                    <fullName>Not processed</fullName>
                </value>
                <value>
                    <fullName>Shipped by courrier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_1__c</fullName>
        <label>Type 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Minitature</fullName>
                </value>
                <value>
                    <fullName>Sale Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_2__c</fullName>
        <label>Type 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Minitature</fullName>
                </value>
                <value>
                    <fullName>Sale Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product or sample offered or exchanged during parent case lifecycle.</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Compensations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Surname__c</fullName>
        <label>Surname</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_10__c</fullName>
        <label>Type 10</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sample</fullName>
                </value>
                <value>
                    <fullName>Minitature</fullName>
                </value>
                <value>
                    <fullName>Sale Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>SRCGSA-645</description>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_1__c</fullName>
        <label>Quantity 1</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_2__c</fullName>
        <label>Quantity 2</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr</fullName>
                </value>
                <value>
                    <fullName>Mrs</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity_10__c</fullName>
        <label>Quantity 10</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reference_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference 1</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Commercial Gestures (Reference 1)</relationshipLabel>
        <relationshipName>Commercial_Gestures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference 2</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Commercial Gestures (Reference 2)</relationshipLabel>
        <relationshipName>Commercial_Gestures1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Postage_Cost__c</fullName>
        <label>Postage Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reference_10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reference 10</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Commercial Gestures (Reference 10)</relationshipLabel>
        <relationshipName>Commercial_Gestures9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tracking_URL__c</fullName>
        <label>Tracking URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sending_Channel__c</fullName>
        <label>Sending Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Processed in Cybersource</fullName>
                </value>
                <value>
                    <fullName>Sent from AX</fullName>
                </value>
                <value>
                    <fullName>Sent from My Dior Customer</fullName>
                    <label>Sent from Comeback (FR)</label>
                </value>
                <value>
                    <fullName>Sent from CS Provider</fullName>
                </value>
                <value>
                    <fullName>Sent from SAP</fullName>
                </value>
                <value>
                    <fullName>Sent from SFCC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Case_Record_Type__c</fullName>
        <formula>Case__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Product__c</fullName>
        <description>Checks whether Product lookup is populated in order to display Product related record component on App Builder page.</description>
        <formula>IF(ISBLANK(Product__c), false, true)</formula>
        <label>Existing Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Sale_Number__c</fullName>
        <formula>Case__r.Related_Sale_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Sale Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commercial_gesture_date__c</fullName>
        <label>Commercial gesture date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Secondary_postal_address__c</fullName>
        <label>Secondary postal address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Gesture_Motive__c</fullName>
        <label>Commercial Gesture Motive</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Exceptional Refund Accepted</fullName>
                </value>
                <value>
                    <fullName>Exceptional replacement or exchange</fullName>
                </value>
                <value>
                    <fullName>First exchange &amp; gift</fullName>
                </value>
                <value>
                    <fullName>First replacement &amp; gift</fullName>
                </value>
                <value>
                    <fullName>Miniatures request</fullName>
                </value>
                <value>
                    <fullName>Missing GWP Eco</fullName>
                </value>
                <value>
                    <fullName>Missing Sample Eco</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Refund Ecommerce</fullName>
                </value>
                <value>
                    <fullName>Samples request</fullName>
                </value>
                <value>
                    <fullName>Second parcel</fullName>
                </value>
                <value>
                    <fullName>Special Goodwill Gesture</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_associe_la_Requete__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Compensations</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>